--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
+    <!-- Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Game Hive</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark p-3 ">
-            <a class="navbar-brand font-weight-bold" href="#">Game Hive</a>
+            <a class="navbar-brand" href="#">Game Hive</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -31,7 +36,7 @@
                         <a class="a" href="#">Link</a>
                     </li>
                     <li class="nav-item p-2">
-                        <a class="a" href="#">Disabled</a>
+                        <a class="a" href="#">Product</a>
                     </li>
                 </ul>
             </div>
@@ -56,14 +61,42 @@
             </div>
         </section>
         <section id="Category">
-            <div class="main">
-                
+            <div class="main mb-5">
+                <div class="con-cat p-4 align-center">
+                    <h2 class="text-center font-weight-bolder mb-5">Consoles</h2>
+                    <div class="products d-flex col-12 flex-wrap justify-content-between">
+                        <div class="card p-3 w-25">
+                            <img class="img-fluid p-4" src="Images/controller.png" alt="">
+                            <h4 class="text-center">Play station 5</h4>
+                            <hr>
+                            <p class="text-center">$499.99</p>
+                            <a class="btn btn-outline w-100" href="#"><i class="fa-solid fa-cart-shopping"></i> Add to cart</a>
+                        </div>
+                        <div class="card p-3 w-25">
+                            <img class="img-fluid p-4" src="Images/controller.png" alt="">
+                            <h4 class="text-center">Play station 5</h4>
+                            <hr>
+                            <p class="text-center">$499.99</p>
+                            <a class="btn btn-outline w-100" href="#"><i class="fa-solid fa-cart-shopping"></i> Add to cart</a>
+                        </div>
+                        <div class="card p-3 w-25">
+                            <img class="img-fluid p-4" src="Images/controller.png" alt="">
+                            <h4 class="text-center">Play station 5</h4>
+                            <hr>
+                            <p class="text-center">$499.99</p>
+                            <a class="btn btn-outline w-100" href="#"><i class="fa-solid fa-cart-shopping"></i> Add to cart</a>
+                        </div>
+                    </div>
+                    <div class="row mt-5 justify-content-center">
+                        <a class="btn btn-outline" href="#">See more <i class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="product">
             <div class="main">
                 <div class="pro-con">
-                    
+
                 </div>
             </div>
         </section>
